--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <div class="fa fa-dot-circle-o tl-icons"></div>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -222,7 +222,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <div class="fa fa-users tl-icons"></div>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -238,7 +238,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <div class="fa fa-rocket tl-icons"></div>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -254,7 +254,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/portfolio/cutterslounge-app.png" alt="">
+                                <div class="fa fa-gift tl-icons"></div>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
