--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet/less" type="text/css" href="less/agency.less" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.4/less.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false" style=""></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
         <!-- Custom CSS -->
 
 
