--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -105,7 +105,7 @@
                     </span>
                     <h4 class="service-heading">Consulting</h4>
                     <p class="text-muted">
-                        Concept, Training, Startup Coaching, Building Startup Teams, Product Expertise 
+                        Concept - Training - Startup Coaching - Building Startup Teams - Product Expertise
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -115,7 +115,7 @@
                     </span>
                     <h4 class="service-heading">Design</h4>
                     <p class="text-muted">
-                        Concept, Brand, UX/UI, Mobile, Native
+                        Concept - Brand - UX/UI - Mobile - Native
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -125,7 +125,7 @@
                     </span>
                     <h4 class="service-heading">Development</h4>
                     <p class="text-muted">
-                        Frontend, Backend, Operations, Testing, Mobile
+                        Frontend - Backend - Operations - Testing - Mobile
                     </p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Featured Projects</h2>
-                    <h3 class="section-subheading text-muted">Pushing pixels to shift bits.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -153,11 +153,11 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cutters Lounge Product Website</h4>
-                        <p class="text-muted">UX/UI Design &amp; Development | A Pure Labs/PlanIT product</p>
+                        <p class="text-muted">UX/UI Design &amp; Development <br> A Pure Labs/PlanIT product</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModalCuttersLoungeMobile" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -167,11 +167,11 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cutters Lounge Mobile Web App</h4>
-                        <p class="text-muted">UX/UI Design &amp; Development | A Pure Labs/PlanIT product</p>
+                        <p class="text-muted">UX/UI Design &amp; Development <br> A Pure Labs/PlanIT product</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModalCuttersLoungeApp" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -181,26 +181,25 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cutters Lounge Web App </h4>
-                        <p class="text-muted">UX/UI Design &amp; Development | A Pure Labs/PlanIT product</p>
+                        <p class="text-muted">UX/UI Design &amp; Development <br> A Pure Labs/PlanIT product</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
 
     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">The Pure Labs story so far</h3>
+                    <h3 class="section-subheading text-muted">The Pure Labs Story</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <div class="fa fa-dot-circle-o tl-icons"></div>
@@ -212,7 +211,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Today pure labs is invested in two startups. Besides daily consulting the team is busy working on new products and disruptive ideas.
+                                        Today Pure Labs is invested in two startups. Besides daily consulting, the team is busy working on new products and exciting ideas.
                                     </p>
                                 </div>
                             </div>
@@ -228,7 +227,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        In September 2013 The Catenate Group joined the Cutters Lounge Team. This allowed us to focus on new projects and more consulting work.
+                                        In September 2013 The Catenate Group joined the Cutters Lounge Team to help us to scale Cutters Lounge even further.
+                                        <br>
+                                        This also allowed us to step a bit back from Cutters Lounge and focus again on new projects and consulting work.
                                     </p>
                                 </div>
                             </div>
@@ -244,7 +245,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        After 5 months of hard work Cutters Lounge finally has been launched. 2 weeks later Cutters Lounge counted over 100 users.
+                                        After 5 months of hard work Cutters Lounge finally has been launched. Two weeks later Cutters Lounge counted already over 50 users.
                                     </p>
                                 </div>
                             </div>
@@ -261,15 +262,10 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         In November 2012 Dana and Sebatian started to work full time on Cutters Lounge after a year of startup experience in London.
+                                        <br>
+                                        Following the lean startup principles, we bootstraped Cutters Lounge by ourself without any venture capital at this time.
                                     </p>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
                             </div>
                         </li>
                     </ul>
@@ -285,7 +281,6 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Managing Directors</h2>
                     <h3 class="section-subheading text-muted">
-                        We <3 tits
                     </h3>
                 </div>
             </div>
@@ -298,9 +293,9 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/DanaNeda" target="_blank"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-xing" target="_blank"></i></a>
+                            <li><a href="https://www.xing.com/profile/Dana_Nedamaldeen"><i class="fa fa-xing" target="_blank"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
+                            <li><a href="https://de.linkedin.com/pub/dana-nedamaldeen/48/587/b3a/en"><i class="fa fa-linkedin" target="_blank"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -313,9 +308,9 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/sebslomski" target="_blank"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-xing" target="_blank"></i></a>
+                            <li><a href="https://www.xing.com/profile/Sebastian_Slomski"><i class="fa fa-xing" target="_blank"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
+                            <li><a href="https://de.linkedin.com/pub/sebastian-slomski/35/400/850/"><i class="fa fa-linkedin" target="_blank"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -325,14 +320,6 @@
                         <img src="img/team/vitus-neumayer.jpg" class="img-responsive img-circle" alt="">
                         <h4>Vitus Neumayer</h4>
                         <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter" target="_blank"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-xing" target="_blank"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -434,7 +421,6 @@
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
-    <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModalCuttersLoungeWebsite" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -449,16 +435,81 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Cutters Lounge Product Website</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p class="item-intro text-muted"></p>
                             <img class="img-responsive" src="img/portfolio/cutterslounge-website.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+                                <strong>Cutters Lounge</strong>: Appointment management, made easy
+                                <br>
+                                Plan appointments, invite customers and send reminders. All with just a few mouse clicks.
+                                <br>
+                                <a href="https://cutterslounge.de">Cutters Lounge Website</a>
+                            </p>
+
                             <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
+                                <li>Date: February 2014</li>
                             </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModalCuttersLoungeApp" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Cutters Lounge Web App</h2>
+                            <p class="item-intro text-muted"></p>
+                            <img class="img-responsive" src="img/portfolio/cutterslounge-app.png" alt="">
+                            <p>
+                                <strong>Cutters Lounge</strong>: Appointment management, made easy
+                                <br>
+                                Plan appointments, invite customers and send reminders. All with just a few mouse clicks.
+                                <br>
+                                <a href="https://cutterslounge.de">Cutters Lounge Website</a>
+                            </p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModalCuttersLoungeMobile" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Cutters Lounge Mobile Web App</h2>
+                            <p class="item-intro text-muted"></p>
+                            <img class="img-responsive" src="img/portfolio/cutterslounge-mobile.png" alt="">
+                            <p>
+                                <strong>Cutters Lounge</strong>: Appointment management, made easy
+                                <br>
+                                Plan appointments, invite customers and send reminders. All with just a few mouse clicks.
+                                <br>
+                                <a href="https://cutterslounge.de">Cutters Lounge Website</a>
+                            </p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -482,7 +533,6 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
-    <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
 </body>
 </html>
