--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </li>
+                r       </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <div class="fa fa-rocket tl-icons"></div>
@@ -355,47 +355,44 @@
     </aside>
 
     <section id="contact" class="contact">
-        <section class="map"></section>
-        
+        <div class="map"></div>
         <div class="contact-wrapper">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Contact Us</h2>
-                        <h3 class="section-subheading text-muted">Interested in working together? Feel free to use the form below.</h3>
+                        <h3 class="section-subheading text-muted">Interested in working together?</h3>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <form name="sentMessage" id="contactForm" novalidate>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="clearfix"></div>
-                                <div class="col-lg-12 text-center">
-                                    <div id="success"></div>
-                                    <button type="submit" class="btn btn-xl">Send Message</button>
-                                </div>
-                            </div>
-                        </form>
+                <div class="contact-inner-wrapper">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h4>Get in contact with us</h4>
+                            Email: <a href="mailto:hello@purelabs.io">hello@purelabs.io</a>
+                            <br>
+                            <br>
+                            <br>
+
+                            <h4>or visit us in our beautiful office</h4>
+                            Adams-Lehmann-Straße 44
+                            <br>
+                            4th floor
+                            <br>
+                            <br>
+                            80797 München
+                        </div>
+                        <div class="col-lg-6">
+                            <h4>Legal notice</h4>
+                            Pure Labs UG (haftungsbeschränkt)
+                            <br>
+                            <br>
+                            Managing directors: Dana Nedamaldeen, Sebastian Slomski
+                            <br>
+                            <br>
+                            Trade register: Amtsgericht München
+                            <br>
+                            Trade register number: HRB 205999
+                        </div>
                     </div>
                 </div>
             </div>
@@ -410,8 +407,6 @@
                 </div>
                 <div class="col-md-4 col-md-offset-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Terms of Use</a>
-                        </li>
                     </ul>
                 </div>
             </div>
